@@ -1,5 +1,10 @@
 2007-01-08  Rodrigo Moya <rodrigo@novell.com>
 
+	* gnome-keybinding-properties.c (create_dialog, clear_old_model):
+	moved gtk_scrolled_window_ call back to its correct place.
+
+2007-01-08  Rodrigo Moya <rodrigo@novell.com>
+
 	Fixes #128158
 	
 	Patch by Jens Granseuer <jensgr@gmx.net>
